--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div class="circle1">
+		<div class="green">
 		</div>
-		<div class="circle2">
+		<div class="yellow">
 		</div>
-		<div class="circle3">
+		<div class="red">
 		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
